--- a/src/main/resources/invest_prodj/investment_window.fxml
+++ b/src/main/resources/invest_prodj/investment_window.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="main_window" depthTest="ENABLE" maxHeight="860.0" maxWidth="1320.0" minHeight="860.0" minWidth="1320.0" prefHeight="0.0" prefWidth="0.0" styleClass="anchor" stylesheets="@style/main.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="invest_prodj.InvestmentWindowController">
+<AnchorPane fx:id="main_window" depthTest="ENABLE" maxHeight="860.0" maxWidth="1320.0" minHeight="860.0" minWidth="1320.0" prefHeight="0.0" prefWidth="0.0" styleClass="anchor" stylesheets="@style/investment_main.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="invest_prodj.InvestmentWindowController">
    <children>
       <ButtonBar fx:id="button_menu" buttonMinWidth="100.0" layoutX="-39.0" layoutY="9.0" maxHeight="198.0" maxWidth="1320.0" minHeight="60.0" minWidth="0.0" prefHeight="60.0" prefWidth="707.0" AnchorPane.leftAnchor="-39.0" AnchorPane.rightAnchor="652.0" AnchorPane.topAnchor="9.0">
         <buttons>
@@ -80,12 +80,11 @@
       </ButtonBar>
       <TableView fx:id="investment_table" editable="true" layoutX="10.0" layoutY="84.0" onMouseClicked="#take_investment_from_table" opacity="0.95" prefHeight="624.0" prefWidth="1300.0" style="-fx-background-color: #ADD8E6;" styleClass="tableview" stylesheets="@style/main.css" AnchorPane.leftAnchor="10.0">
         <columns>
-          <TableColumn fx:id="investment_table_name" prefWidth="124.0" text="Название" />
-          <TableColumn fx:id="investment_table_amount" prefWidth="122.0" text="Сумма" />
-            <TableColumn fx:id="investment_table_date" prefWidth="122.0" text="Дата" />
-            <TableColumn fx:id="investment_table_percent" prefWidth="122.0" text="Процент" />
+          <TableColumn fx:id="investment_table_name" prefWidth="174.0" text="Название" />
+          <TableColumn fx:id="investment_table_amount" prefWidth="130.0" style="-fx-alignment: center;" text="Сумма" />
+            <TableColumn fx:id="investment_table_date" prefWidth="122.0" style="-fx-alignment: center;" text="Дата" />
+            <TableColumn fx:id="investment_table_percent" prefWidth="122.0" style="-fx-alignment: center;" text="Процент" />
             <TableColumn fx:id="investment_table_note" prefWidth="560.0" text="Примечание" />
-            <TableColumn fx:id="investment_table_person_name" prefWidth="122.0" text="Место нахождения" />
             <TableColumn fx:id="investment_table_id" maxWidth="10.0" prefWidth="10.0" text="id" visible="false" />
             <TableColumn fx:id="investment_table_person_id" maxWidth="10.0" prefWidth="10.0" text="id" visible="false" />
         </columns>
@@ -214,7 +213,7 @@
                   </InnerShadow>
                </effect>
             </Label>
-            <ComboBox fx:id="investment_combobox_name" maxHeight="55.0" maxWidth="213.0" minHeight="55.0" minWidth="132.0" opacity="0.9" prefHeight="55.0" prefWidth="213.0" style="-fx-background-color: #ADD8E6;">
+            <ComboBox fx:id="investment_combobox_name" maxHeight="55.0" maxWidth="213.0" minHeight="55.0" minWidth="132.0" opacity="0.9" prefHeight="55.0" prefWidth="213.0" style="-fx-background-color: #ADD8E6; -fx-alignment: center;">
                <effect>
                   <InnerShadow choke="0.28" height="24.25" radius="11.5625" width="24.0">
                      <color>
