--- a/src/main/resources/invest_prodj/main.fxml
+++ b/src/main/resources/invest_prodj/main.fxml
@@ -46,7 +46,7 @@
                   <InnerShadow height="15.14" radius="8.535" />
                </effect>
             </Button>
-            <Button fx:id="note_btn" alignment="CENTER" cache="true" cacheHint="SPEED" contentDisplay="CENTER" maxHeight="50.0" maxWidth="205.0" minHeight="50.0" mnemonicParsing="false" opacity="0.95" prefHeight="50.0" prefWidth="703.0" style="-fx-background-color: #B0C4DE; -fx-background-radius: 10px;" styleClass="btn" text="Заметки" textAlignment="CENTER" textFill="#171717" textOverrun="CLIP" wrapText="true">
+            <Button fx:id="note_btn" alignment="CENTER" cache="true" cacheHint="SPEED" contentDisplay="CENTER" maxHeight="50.0" maxWidth="205.0" minHeight="50.0" mnemonicParsing="false" onAction="#switch_window_to_note" opacity="0.95" prefHeight="50.0" prefWidth="703.0" style="-fx-background-color: #B0C4DE; -fx-background-radius: 10px;" styleClass="btn" text="Заметки" textAlignment="CENTER" textFill="#171717" textOverrun="CLIP" wrapText="true">
                <font>
                   <Font name="Comic Sans MS Bold" size="16.0" />
                </font>
