--- a/src/main/resources/invest_prodj/dialor_err.fxml
+++ b/src/main/resources/invest_prodj/dialor_err.fxml
@@ -3,19 +3,20 @@
 <?import javafx.scene.control.ButtonType?>
 <?import javafx.scene.control.DialogPane?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<DialogPane fx:id="dialog_err" minHeight="114.0" minWidth="248.0" prefHeight="114.0" prefWidth="248.0" styleClass="dialog_err" stylesheets="@style/main.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<DialogPane fx:id="dialog_err" focusTraversable="true" minHeight="114.0" minWidth="248.0" prefHeight="114.0" prefWidth="248.0" styleClass="dialog_err" stylesheets="@style/main.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <buttonTypes>
       <ButtonType fx:constant="OK" />
    </buttonTypes>
    <content>
       <AnchorPane prefHeight="200.0" prefWidth="700.0">
          <children>
-            <Label fx:id="dialog_learn_time_label" alignment="CENTER" contentDisplay="CENTER" layoutX="15.0" layoutY="14.0" prefHeight="59.0" prefWidth="218.0" style="-fx-background-color: #F08080;" text="Выберите обьект">
+            <Label fx:id="dialog_learn_time_label" alignment="CENTER" contentDisplay="CENTER" layoutX="-1.0" layoutY="-1.0" prefHeight="74.0" prefWidth="248.0" style="-fx-background-color: #F08080;" text="Выберите обьект">
                <font>
                   <Font name="Arial Black" size="15.0" />
                </font>
@@ -30,4 +31,7 @@
          </children>
       </AnchorPane>
    </content>
+   <effect>
+      <ColorAdjust brightness="-0.28" contrast="0.66" saturation="-0.02" />
+   </effect>
 </DialogPane>
